fixed the image size. When i zoom in on the browser I realized that the height and width did not fit the surrounding container for the image. Also changed the scrollby to 150px instead of 100px

--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -505,7 +505,7 @@ h2 {
 
 .game-thumbnail {
   width: 124px;
-  height: 70px;
+  height: 70.5px;
   border-width: medium;
   border-style: solid;
   border-radius: 3px;
@@ -517,9 +517,10 @@ h2 {
   text-align: center;
 }
 
-.game-img {
-  width: 118px;
-  height: 64px;
+img.game-img {
+  width: 100%;
+  height: 64%;
+  border-radius: 2px;
 }
 
 .active {
@@ -540,4 +541,8 @@ h6  {
 .active h6 {
   margin: 0 0 10px 0;
   display: block;
+}
+
+.activepill {
+  border-color: blue;
 }
